@@ -49,11 +49,13 @@
     ## and detach functions look for cacheMetaData and call it if it's found.
     for(i in rev(seq(along = search())))
       cacheMetaData(as.environment(i), TRUE)
-    # make assignments for new class and class<- functions diretly into base
-    # if base is defined in a name space
     if (! identical(environment(log), .GlobalEnv)) { # check if namespace used
-        assign("class", get("class"), env = NULL)
-        assign("class<-", get("class<-"), env = NULL)
+        # if base is using a name space then any replacements for functions
+        # in base defined in methods need to be installed directly into base
+        # or they will not be visible to base code.
+        for (n in ls(env = where))
+            if (exists(n, env = NULL))
+                assign(n, get(n, env = where), env = NULL)
     }
 }
 
